--- a/app/assets/stylesheets/statistics.css.scss
+++ b/app/assets/stylesheets/statistics.css.scss
@@ -49,7 +49,6 @@
 }
 
 .selector {
-	vertical-align:top;
 	float: left;
 }
 
@@ -61,6 +60,8 @@
 	line-height: 22px !important;
 	padding-top:0px !important;
 	color: white !important;
+	background-color: #005DA0 !important;
+	border-color: #005DA0 !important;
 }
 
 .graph-selector {
